<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Organizer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
     <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
     <string name="pref_manage_categories_title">Expense categories</string>
    <string name="pref_manage_categories_summary">Add, edit, delete expense categories.</string>
    <string name="pref_category_title_manage">Manage</string>
    <string name="no_categories">No categories.</string>
    <string name="import_categories">Import categories</string>
    <string name="parse_error_parse_exception">Could not parse file</string>
    <string name="parse_error_other_exception">An error occurred</string>
    <string name="alert_import_expense_categories_title">Import Expense Categories</string>
    <string name="import_alert_ok">Import</string>
    <string name="import_alert_cancel">Cancel</string>
    <string name="import_parsing">Importing Expense Categories</string>
    <string name="parse_error_no_data_found">No data found to import.</string>
    <string name="import_categories_success">%1$s categories imported successfully</string>
    <string name="test">test</string>
    <string name="menu_create_sub_cat">New sub category</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit_cat">Edit category</string>
    <string name="pref_category_title_import">Import</string>
    <string name="pref_import_expense_categories_title">Import categories</string>
    <string name="pref_import_expense_categories_summary">Import default categories.</string>
    <string name="no_title_given">You did not enter any title.</string>
    <string name="menu_create_main_cat">New</string>
    <string name="pref_import_transaction_categories_title">Import transaction methods</string>
    <string name="pref_import_transaction_categories_summary">Import default transaction methods.</string>
    <string name="alert_import_transaction_categories_title">Import Transaction Methods</string>
    <string name="alert_import_account_categories_title">Import Account Types</string>
    <string name="pref_import_account_categories_title">Import account types</string>
    <string name="pref_import_account_categories_summary">Import default account categories.</string>
    <string name="pref_manage_expense_categories_title">Expense Categories</string>
    <string name="pref_manage_transaction_categories_title">Transaction methods</string>
    <string name="pref_manage_account_categories_title">Account categories</string>
    <string name="pref_manage_account_categories_summary">Add, edit, delete account categories.</string>
    <string name="pref_manage_transaction_categories_summary">Add, edit, delete transaction methods.</string>
    <string name="menu_create_account_cat">New account category</string>
    <string name="menu_create_transaction_cat">New transaction method</string>
    <string name="menu_edit_account_cat">Edit account category</string>
    <string name="menu_edit_transaction_cat">Edit transaction method</string>
    <string name="account_name">Name</string>
    <string name="account_description">Description</string>
    <string name="picture_camera">Take a Picture</string>
    <string name="picture_gallery">Select from Gallery</string>
    <string name="picture_clear">Delete Picture</string>
    <string name="account_number">Account #</string>
    <string name="account_balance">Balance</string>
    <string name="account_category">Category</string>
    <string name="account_limit">Limit</string>
    <string name="select">Select type</string>
    <string name="account_overview_title">Accounts</string>
    <string name="account_new_title">New account</string>
    <string name="account_edit_title">Edit Account</string>
    <string name="select_account_category">Select account category</string>
    <string name="account_due">Due date</string>
    <string name="account_payment">Payment</string>
    <string name="hint_account_name">Name</string>
    <string name="hint_account_number">Last 4 digits</string>
    <string name="hint_account_description">Description</string>
    <string name="hint_account_balance">Initial balance</string>
    <string name="hint_account_limit">Credit limit</string>
    <string name="hint_account_payment">Monthly payment</string>
    <string name="hint_account_due">Date</string>
    <string name="hint_account_category">Category</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="menu_edit_account">Edit/View Account</string>
    <string name="transaction_new_title">New transaction</string>
    <string name="transaction_edit_title">Edit transaction</string>
    <string name="select_transaction_category">Select transaction category</string>
    <string name="select_expense_category">Select expense category</string>
    <string name="menu_edit_transaction">Edit/View Transaction</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Accounts</item>
        <item >Transactions</item>
        <item >Budgets</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>
